--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,14 @@
 body {
-  background: #ece9e6; /* fallback for old browsers */
+  background: #abbaab; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
     #ffffff,
-    #ece9e6
+    #abbaab
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
     #ffffff,
-    #ece9e6
+    #abbaab
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   height: 100%;
